Fix header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ img {
 .header {
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
   background-color: #fff;
   box-shadow: 0 5px 10px -6px rgba(0,0,0,.1);
